--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+/* Purpose:    CSS file to accompany the Craps game.
+   Programmer: William Hunt modifed the CSS file from an 
+               App Brewery Project.
+   Date:       9 July 2021
+*/
+
+.btn {
+  margin-bottom: 2rem;
+}
+
 .container {
   width: 70%;
   margin: auto;
@@ -7,25 +17,24 @@
 .dice {
   text-align: center;
   display: inline-block;
-
 }
 
 body {
-  background-color: #393E46;
+  background-color: #393e46;
 }
 
 h1 {
   margin: 30px;
-  font-family: 'Lobster', cursive;
+  font-family: "Lobster", cursive;
   text-shadow: 5px 0 #232931;
   font-size: 8rem;
-  color: #4ECCA3;
+  color: #4ecca3;
 }
 
 p {
   font-size: 2rem;
-  color: #4ECCA3;
-  font-family: 'Indie Flower', cursive;
+  color: #4ecca3;
+  font-family: "Indie Flower", cursive;
 }
 
 img {
@@ -34,8 +43,7 @@ img {
 
 footer {
   margin-top: 5%;
-  color: #EEEEEE;
+  color: #eeeeee;
   text-align: center;
-  font-family: 'Indie Flower', cursive;
-
+  font-family: "Indie Flower", cursive;
 }
